--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,8 @@ node_modules
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -71,3 +72,5 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+
+mashup.txt
